# a2-react-aria

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .markdownlint.json  .markdownlintignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  RELEASING.md  SECURITY.md  biome.json  dev-local.ps1  docker-compose.sonarqube.yml  package.json  plan.md  playwright.config.ts  playwright.e2e.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  references.md  sonar-project.properties  tsconfig.json  turbo.json  vitest.storybook.config.ts  vitest.workspace.ts
.changeset/: add-default-registry.md  breadcrumb-empty-href.md  checkbox-form-state-descriptions.md  config.json  pre.json  registry-schema-export.md  registry-strict-by-default.md  remove-hoc-wiring.md  review-findings-fixes.md  safe-rivers-talk.md  shadcn-foreground-tokens.md  sync-cli-to-v1.md  text-area-component.md  url-sanitizer-control-chars.md
.claude/: settings.json
.github/: copilot-instructions.md  pull_request_template.md
.storybook/: addon-theme.tsx  decorators.tsx  main.ts  preview.ts  preview.tsx  tailwind.css  theme.ts
apps/demo/agent/: .env.example  Dockerfile  main.py  pyproject.toml
apps/demo/agent/restaurant_agent/: _log.py  agent.py  restaurant_data.py
docs/: CHANGELOG.md  astro.config.mjs  package.json  playwright.config.ts
registry/: a2ui-schema.json  accordion.json  alert.json  breadcrumb.json  button.json  card.json  checkbox.json  date-picker.json  dialog.json  form.json  index.json  layout.json  menu.json  number-field.json  radio.json  (+11 more)
(+197 files in other folders)
