[project]
name = "restaurant-agent"
version = "0.1.0"
description = "ADK restaurant booking agent — a2-react-aria demo"
requires-python = ">=3.12"
dependencies = [
    "google-adk[a2a]>=2.1.0",
    "aiosqlite>=0.20.0",
    "sqlalchemy>=2.0.0",
    "litellm>=1.84.0",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.0.0",
    "jsonschema>=4.23.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:google.genai",
    "ignore:\\[EXPERIMENTAL\\]:UserWarning",
]
